@@ -1,5 +1,15 @@
 2011-07-02  Jan Kratochvil  <jan.kratochvil@redhat.com>
 
+	Stop on first linespec terminator instead of eating what we can.
+	* linespec.c (is_linespec_boundary): New function.
+	(name_end): Remove function.
+	(keep_name_info): New parameter on_boundary, replace the body.
+	(decode_line_1): Provide the parameter to keep_name_info.
+	(decode_compound): Likewise.  Drop the trailing java return type
+	handling.  Twice.
+
+2011-07-02  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
 	Fall back linespec to minimal symbols.
 	* linespec.c (decode_line_1): New variable ex, saved_argptr.  Protect
 	decode_compound by TRY_CATCH, fall back on minsyms if it failed.
